--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs-alt/vuetify": "^0.0.5",
     "mdi": "^2.2.43",
     "sass": "^1.52.1",
+    "vite-plugin-vuetify": "^1.0.0-alpha.11",
     "vuetify": "^3.0.0-beta.2"
   }
 }
